syntax = "proto3";

package org.hse.nnbuilder.services;


service AuthService {
  rpc register (RegisterRequest) returns (RegisterResponse);
  rpc login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string exception = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string exception = 2;
}